front actualizado y pruebas unitarias

--- a/src/app/organizacion/results/components/results.component.html
+++ b/src/app/organizacion/results/components/results.component.html
@@ -1,8 +1,9 @@
-<div class="chart-container mt-5">
+<h1 class="text-center mt-2">Personas por Área</h1>
+<div class="chart-container mt-3">
     <canvas id="myChart"></canvas>
 </div>
 
 <!-- Botón para volver a Home -->
-<div class="text-center mb-5 mt-4">
-  <button class="btn btn-primary" (click)="goHome()">Volver a Home</button>
+<div class="text-center pb-3 mb-5 mt-4">
+  <button class="btn btn-info text-light-emphasis" (click)="goHome()">Volver a Home <i class="bi bi-house-door-fill"></i></button>
 </div>
