--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,16 +1,20 @@
 <!-- Footer -->
-<footer class="bg-light text-center text-lg-start">
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 mb-4 mb-md-0">
-          <h6 class="text-uppercase text-center">
-            <a href="mailto:tu-email@gmail.com">Contáctate con Nosotros</a>
-          </h6>
-        </div>
+<footer class="text-center text-lg-start bg-info p-2 text-dark bg-opacity-25">
+  <div class="container p-2 ">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 mb-4 mb-md-0">
+        <h6 class="text-uppercase text-center">
+          Organizacion de Personas
+        </h6>
+      </div>
+      <div class="col-lg-12 col-md-12 mb-4 mb-md-0">
+        <p class="text-center">
+          <a href="mailto:organizacionpersonas@gmail.com">Contáctate con Nosotros <i class="bi bi-envelope-fill"></i></a>
+        </p>
       </div>
     </div>
-    <div class="text-center p-3 bg-light">
-      Made by Camila
-    </div>
-  </footer>
-  
+  </div>
+  <div class="text-center p-2">
+    Made by Camila <i class="bi bi-suit-heart-fill"></i>
+  </div>
+</footer>
