--- a/src/app/organizacion/about/components/about.component.css
+++ b/src/app/organizacion/about/components/about.component.css
@@ -3,7 +3,7 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     max-width: 70%; 
     margin: auto;
     min-height: calc(100vh - 100px);
