--- a/src/app/organizacion/about/components/about.component.html
+++ b/src/app/organizacion/about/components/about.component.html
@@ -13,7 +13,7 @@
                 Actualmente, cursa el programa “Eureka”, ampliando sus competencias técnicas y aplicando su experiencia en trabajo en equipo y adaptabilidad, comprometida a seguir aprendiendo y aportando en el ámbito tecnológico.
             </p>
             <!-- Botón para volver a Home -->
-            <a href="/" class="btn btn-primary mt-3">Volver a Home</a>
+            <a href="/" class="btn btn-info text-light mt-3">Volver a Home <i class="bi bi-house-door-fill"></i></a>
         </div>
     </div>
 </div>
