--- a/src/app/organizacion/home/components/home.component.html
+++ b/src/app/organizacion/home/components/home.component.html
@@ -1,15 +1,15 @@
-<div class="d-flex align-items-center justify-content-center vh-100 ">
+<div class="d-flex align-items-center justify-content-center m-5 p-5">
   <div class="container text-center custom-container">
     <h1 class="mb-4">Organización de Personas</h1>
     <div class="row mt-4">
       <div class="col-12 mb-2">
-        <button routerLink="/registro" class="btn btn-primary btn-block custom-btn">Registro</button>
+        <button routerLink="/registro" class="btn btn-info btn-block custom-btn text-light m-2">Registro <i class="bi bi-person-fill"></i></button>
       </div>
       <div class="col-12 mb-2">
-        <button routerLink="/resultados" class="btn btn-success btn-block custom-btn">Resultados</button>
+        <button routerLink="/resultados" class="btn btn-success btn-block custom-btn m-2">Resultados <i class="bi bi-bar-chart-fill"></i></button>
       </div>
       <div class="col-12 mb-2">
-        <button routerLink="/acercade" class="btn btn-info btn-block custom-btn">Acerca de mí</button>
+        <button routerLink="/acercade" class="btn btn-primary btn-block custom-btn m2">Acerca de mí <i class="bi bi-person-square"></i></button>
       </div>
     </div>
   </div>
