--- a/src/app/organizacion/register/components/register.component.css
+++ b/src/app/organizacion/register/components/register.component.css
@@ -6,6 +6,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 800px; /* Ajustar el ancho máximo del contenedor */
   margin: auto; /* Centrar el contenedor */
+  height: 590px;
 }
 
 h2 {
