--- a/src/app/organizacion/register/components/register.component.html
+++ b/src/app/organizacion/register/components/register.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-5 mb-5 pb-5 custom-container">
-  <div class="row justify-content-center m-3">
+  <div class="row justify-content-center ">
     <div class="col-md-8">
-      <h2 class="text-center mb-4">Registro</h2>
+      <h2 class="text-center m-5">Registro de personas</h2>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group mb-3">
-          <label for="nombre">Nombre</label>
+          <label for="nombre">Nombre <i class="bi bi-person"></i></label>
           <input
             type="text"
             id="nombre"
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="correo">Correo Electrónico</label>
+          <label for="correo">Correo Electrónico <i class="bi bi-envelope"></i></label>
           <input
             type="email"
             id="correo"
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="area">Área</label>
+          <label for="area">Área <i class="bi bi-diagram-3"></i></label>
           <select
             id="area"
             class="form-control"
@@ -45,7 +45,7 @@
             Debes seleccionar un área.
           </div>
         </div>
-        <div class="d-flex justify-content-between mt-4">
+        <div class="d-flex justify-content-between mt-5">
           <button
             type="submit"
             class="btn btn-primary"
@@ -55,10 +55,10 @@
           </button>
           <button
             type="button"
-            class="btn btn-secondary"
+            class="btn btn-info text-light"
             (click)="navigateToHome()"
           >
-            Volver al Home
+            Volver al Home <i class="bi bi-house-door-fill"></i>
           </button>
         </div>
       </form>
