--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,22 +1,20 @@
 footer {
-    background-color: #f8f9fa;
-    padding: 10px 0;
-    text-align: center;
-    width: 100%;
-    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
-    position: relative; /* Posición relativa para asegurar que se coloque correctamente */
-  }
-  
-  footer a {
-    color: #007bff; /* Color del enlace */
-    text-decoration: none;
-  }
-  
-  footer a:hover {
-    text-decoration: underline; /* Subrayado al pasar el ratón por encima */
-  }
-  
-  footer .text-center {
-    font-size: 14px; /* Tamaño del texto */
-  }
-  
+  padding: 5px 0; /* Reduced padding */
+  text-align: center;
+  width: 100%;
+  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+  position: relative; /* Posición relativa para asegurar que se coloque correctamente */
+}
+
+footer a {
+  color: #007bff; /* Color del enlace */
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline; /* Subrayado al pasar el ratón por encima */
+}
+
+footer .text-center {
+  font-size: 14px; /* Tamaño del texto */
+}
