--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<router-outlet></router-outlet>
-  
+<!-- <router-outlet> se utiliza para renderizar los componentes según la ruta activa -->
+    <router-outlet></router-outlet>
