--- a/src/app/organizacion/about/components/about.component.html
+++ b/src/app/organizacion/about/components/about.component.html
@@ -1,10 +1,18 @@
+<!-- Contenedor principal con margen superior e inferior -->
 <div class="container mt-3 border-container mb-3">
+    <!-- Fila para centrar el contenido -->
     <div class="row justify-content-center">
+        <!-- Columna con ancho responsivo y alineación centrada -->
         <div class="col-lg-8 col-md-10 col-sm-12 text-center">
+            <!-- Título principal -->
             <h1 class="display-4 font-weight-bold">Acerca de Camila</h1>
+            
+            <!-- Imagen con estilo de borde redondeado y sombra -->
             <div class="my-4">
                 <img src="assets/Camila.jpg" class="rounded-circle img-fluid shadow-lg custom-img" alt="Imagen de Camila">
             </div>
+            
+            <!-- Descripción acerca de -->
             <p class="lead text-justify text-muted">
                 Camila Pizarro Ibaceta es una profesional con experiencia en Turismo, desempeñando roles desde recepcionista hasta asistente de recursos humanos en destinos como San Pedro de Atacama y Torres del Paine. Ha desarrollado habilidades en atención al cliente, liderazgo y resolución de problemas.
 
@@ -12,7 +20,8 @@
 
                 Actualmente, cursa el programa “Eureka”, ampliando sus competencias técnicas y aplicando su experiencia en trabajo en equipo y adaptabilidad, comprometida a seguir aprendiendo y aportando en el ámbito tecnológico.
             </p>
-            <!-- Botón para volver a Home -->
+            
+            <!-- Botón para regresar a la página de inicio -->
             <a href="/" class="btn btn-info text-light mt-3">Volver a Home <i class="bi bi-house-door-fill"></i></a>
         </div>
     </div>
