--- a/src/app/organizacion/home/components/home.component.html
+++ b/src/app/organizacion/home/components/home.component.html
@@ -1,13 +1,19 @@
+<!-- Contenedor principal centrado con margen y padding -->
 <div class="d-flex align-items-center justify-content-center m-5 p-5">
+  <!-- Contenedor interior con texto centrado y estilo personalizado -->
   <div class="container text-center custom-container">
+    <!-- Título principal -->
     <h1 class="mb-4">Organización de Personas</h1>
     <div class="row mt-4">
+      <!-- Botón para ir al registro -->
       <div class="col-12 mb-2">
         <button routerLink="/registro" class="btn btn-info btn-block custom-btn text-light m-2">Registro <i class="bi bi-person-fill"></i></button>
       </div>
+      <!-- Botón para ver resultados -->
       <div class="col-12 mb-2">
         <button routerLink="/resultados" class="btn btn-success btn-block custom-btn m-2">Resultados <i class="bi bi-bar-chart-fill"></i></button>
       </div>
+      <!-- Botón para información sobre mí -->
       <div class="col-12 mb-2">
         <button routerLink="/acercade" class="btn btn-primary btn-block custom-btn m2">Acerca de mí <i class="bi bi-person-square"></i></button>
       </div>
